k8s/mongo.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: mongodb-deployment
  labels:
    app: mongodb

spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb

  template:
    metadata:
      labels:
        app: mongodb

    spec:
      containers: #pod blueprint(container detail)
        - name: mongodb
          image: mongo
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: mongodb #should match with pods label(for now template/metadata/labes/app)
  ports:
    - protocol: TCP
      port: 27017 # service port
      targetPort: 27017 #container port of the deployement
