k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"mongoexpress-service","namespace":"default"},"spec":{"ports":[{"nodePort":30007,"port":8081,"protocol":"TCP","targetPort":8081}],"selector":{"app":"mongo-express"},"type":"LoadBalancer"}}
  creationTimestamp: "2022-10-04T02:42:22Z"
  name: mongoexpress-service
  namespace: default
  resourceVersion: "85375"
  uid: f7ef4a76-cfa3-421b-a8bc-25bd1c594030
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.109.139.183
  clusterIPs:
  - 10.109.139.183
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 30007
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: mongo-express
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
